(Fix&Feature): correção de texto e fluxo e, implantação de método profile, status e verifyDeath)